[gd_scene load_steps=2 format=3 uid="uid://b3p73j2j7mprv"]

[ext_resource type="Script" path="res://scenes/UI/lobby/lobby.gd" id="1_1mcxp"]

[node name="Lobby" type="CanvasLayer"]
script = ExtResource("1_1mcxp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Side" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="CreateLobby" type="Button" parent="Control/MarginContainer/HBoxContainer/Side"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Create Lobby
"

[node name="JoinLobby" type="Button" parent="Control/MarginContainer/HBoxContainer/Side"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Join Lobby
"

[node name="Matchmaking" type="Button" parent="Control/MarginContainer/HBoxContainer/Side"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Matchmaking"

[node name="Players" type="Panel" parent="Control/MarginContainer/HBoxContainer/Side"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/HBoxContainer/Side/Players"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Players"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/Side/Players"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 291.0
offset_bottom = 391.0

[node name="Main" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/Main"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/HBoxContainer/Main/Header"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="LobbyNameLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/Main/Header/GridContainer"]
layout_mode = 2
text = "Lobby Name"

[node name="LobbyNameValue" type="TextEdit" parent="Control/MarginContainer/HBoxContainer/Main/Header/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
editable = false

[node name="LobbyIDLabel" type="Label" parent="Control/MarginContainer/HBoxContainer/Main/Header/GridContainer"]
layout_mode = 2
text = "Lobby ID"

[node name="LobbyIDValue" type="TextEdit" parent="Control/MarginContainer/HBoxContainer/Main/Header/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
editable = false

[node name="Control" type="Control" parent="Control/MarginContainer/HBoxContainer/Main/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer/Main/Header"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/HBoxContainer/Main/Header/VBoxContainer"]
layout_mode = 2
text = "STEAM ID"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Control/MarginContainer/HBoxContainer/Main/Header/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Play"

[node name="Messages" type="Panel" parent="Control/MarginContainer/HBoxContainer/Main"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="MessagesContainer" type="RichTextLabel" parent="Control/MarginContainer/HBoxContainer/Main/Messages"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/Main"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MessageButton" type="Button" parent="Control/MarginContainer/HBoxContainer/Main/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Send Message
"

[node name="MessageInput" type="TextEdit" parent="Control/MarginContainer/HBoxContainer/Main/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Write a message..."

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Side/CreateLobby" to="." method="_on_create_lobby_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Side/JoinLobby" to="." method="_on_join_lobby_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Side/Matchmaking" to="." method="_on_matchmaking_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Main/HBoxContainer/MessageButton" to="." method="_on_message_button_pressed"]
